  - Introduced infrastructure for VIF plug providers.  When OVN is linked with
    an appropriate VIF plug provider CMS can request OVN to plug lports.  This
    is particularly useful in topologies where the ovn-controller process is
    running on SmartNIC control plane CPUs.  Please refer to
    Documentation/topics/vif-plug-providers/vif-plug-providers.rst for more
    information.

OVN v21.09.0 - 01 Oct 2021
--------------------------
  - Added Control Plane Protection support (control plane traffic metering).
  - Added path MTU discovery for ingress traffic originated outside of the
    cluster.
  - Introduced a new "label" field for "allow" and "allow-related" ACLs
    which helps in debugging/backtracking the ACL which allowed a particular
    connection.
  - Allow static routes without nexthops.
  - Enabled logical dp groups as a default.  CMS should disable it if not
    desired.
  - Added support for multiple routing tables in Logical Router Static Routes
    and LRPs. OVN Interconnection supports routes' route tables as well.
    This requires to update schemas for OVN_Northdbound and OVN_IC_Southbound
    DBs.

OVN v21.06.0 - 18 Jun 2021
-------------------------
  - ovn-northd-ddlog: New implementation of northd, based on DDlog.  This
    implementation is incremental, meaning that it only recalculates what is
    needed for the southbound database when northbound changes occur.  It is
    expected to scale better than the C implementation, for large deployments.
    (This may take testing and tuning to be effective.)  This version of OVN
    requires DDLog 0.38.
  - Introduce ovn-controller incremental processing engine statistics
  - Introduced parallel processing in ovn-northd with the NB_Global config option
    'use_parallel_build' to enable it.  It is disabled by default.
  - Support vlan-passthru mode for tag=0 localnet ports.
  - Support custom 802.11ad EthType for localnet ports.