@@ -12,6 +12,9 @@ Post v21.09.0
     running on SmartNIC control plane CPUs.  Please refer to
     Documentation/topics/vif-plug-providers/vif-plug-providers.rst for more
     information.
+  - ovn-controller: Add configuration knob, through OVS external-id
+    "ovn-trim-timeout-ms" to allow specifiying an lflow cache inactivity
+    timeout after which ovn-controller should trim memory.
 
 OVN v21.09.0 - 01 Oct 2021
 --------------------------
